--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Les chevaliers noirs !</h1>
-    <div>Il était une fois un Jedi perdu dans l'espace.</div>
+    <div>
+        Il était une fois un Jedi perdu dans l'espace !!
+    </div>
 </body>
 </html>
