--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Il était une fois un Jedi perdu dans l'espace !!
     </div>
     <div>
-        Et voila un vaisseau.
+        Et voila un vaisseau !
     </div>
 </body>
 </html>
