--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Les chevaliers noirs !</h1>
     <div>
-        Il était une fois un Jedi perdu dans l'espace !!
+        Il était une fois un Jedi perdu dans l'espace !
     </div>
     <div>
-        Et voila un vaisseau !!
+        Et voila un vaisseau !
     </div>
     <ul>
         <li>1. Falcon</li>
@@ -21,7 +21,7 @@
     <div>
         <h2>Planetes</h2>
         <div>
-            Tatouiiin
+            - Tatooine
         </div>
     </div>
 </body>
