--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
         <h2>Planetes</h2>
         <div>
-            - Tatouiiin
+            - Tatooine
         </div>
     </div>
 </body>
